header and Navbar HTML added

--- a/index.html
+++ b/index.html
@@ -1,14 +1,39 @@
-Initial commit<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mathematics Tutorials</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
     <div class="wrapper">
-        Mathematics Tutorials Website
+      <header>
+        <div class="row">
+          <div class="col-8">
+            <div class="logo">Math the fun way</div>
+          </div>
+          <div class="col-4">
+            <div class="searchbox-wrapper">
+              <form action="#" class="searchForm">
+                <label for="search">
+                  <input type="text" name="search" id="search" />
+                </label>
+                <button type="submit">Search a topic</button>
+              </form>
+            </div>
+          </div>
+        </div>
+        <nav class="nav">
+          <ul>
+            <li><a href="#" class="nav-link">Link 1</a></li>
+            <li><a href="#" class="nav-link">Link 2</a></li>
+            <li><a href="#" class="nav-link">Link 3</a></li>
+            <li><a href="#" class="nav-link">Link 4</a></li>
+            <li><a href="#" class="nav-link">Link 5</a></li>
+          </ul>
+        </nav>
+      </header>
     </div>
-</body>
+  </body>
 </html>
