--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <header>
         <div class="row">
           <div class="col-8">
-            <div class="logo">Math the fun way</div>
+            <div class="logo">Maths the Fun Way</div>
           </div>
           <div class="col-4">
             <div class="searchbox-wrapper">
@@ -34,6 +34,25 @@
           </ul>
         </nav>
       </header>
+      <section class="hero-wrapper">
+        <div class="hero-content">
+          <h1>Do you need help with Maths?</h1>
+          <p>
+            Our website uses an interactive methodology of teaching Maths using
+            the latest web technologies. Your learning experience with us is
+            guaranteed to be intuitive and fun. You will have fun while
+            learning. This is the secret of our outstanding results. Check
+            reviews from our students.
+          </p>
+        </div>
+      </section>
+      <div class="row">
+        <div class="col-6">
+          <section class="goto-wrapper">
+            <h2 class="title">Go to:</h2>
+          </section>
+        </div>
+      </div>
     </div>
   </body>
 </html>
