--- a/index.html
+++ b/index.html
@@ -50,9 +50,41 @@
         <div class="col-6">
           <section class="goto-wrapper">
             <h2 class="title">Go to:</h2>
+            <ul class="lessons-list">
+              <li class="item"><a href="#">Year 1 Free Lessons.</a></li>
+              <li class="item"><a href="#">Year 2 Free Lessons.</a></li>
+              <li class="item"><a href="#">Year 3 Free Lessons.</a></li>
+              <li class="item"><a href="#">Year 4 Free Lessons.</a></li>
+              <li class="item"><a href="#">Year 5 Free Lessons.</a></li>
+              <li class="item"><a href="#">Year 6 Free Lessons.</a></li>
+              <li class="item"><a href="#">Year 7 Free Lessons.</a></li>
+              <li class="item"><a href="#">Year 8 Free Lessons.</a></li>
+              <li class="item"><a href="#">Year 9 Free Lessons.</a></li>
+              <li class="item"><a href="#">Year 10 Free Lessons.</a></li>
+              <li class="item"><a href="#">Year 11 Free Lessons.</a></li>
+              <li class="item"><a href="#">Year 12 Free Lessons.</a></li>
+            </ul>
+          </section>
+        </div>
+        <div class="col-6">
+          <section class="whyUs-wrapper">
+            <h2 class="title">Why us?</h2>
+            <ul class="whyUs-list">
+              <li class="item">Our teachers are available any time.</li>
+              <li class="item">Available on laptop, Tablets and Phones.</li>
+              <li class="item">30 day Money Back Guarantee.</li>
+              <li class="item">
+                Interactive games for an enjoyable learning experience.
+              </li>
+              <li class="item">Learn at your own pace.</li>
+              <li class="item">Complete curriculum.</li>
+            </ul>
           </section>
         </div>
       </div>
+      <footer>
+        <p class="copyright">Company name. Copyright &copy; 2020</p>
+      </footer>
     </div>
   </body>
 </html>
