nav & logo added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       <header>
         <div class="row">
           <div class="col-8">
-            <div class="logo">Maths the Fun Way</div>
+            <div class="brand">
+              <a href="#" class="brand-link">Maths the Fun Way</a>
+            </div>
           </div>
           <div class="col-4">
             <div class="searchbox-wrapper">
