header css added

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         </div>
         <nav class="nav">
           <ul>
-            <li><a href="#" class="nav-link">Link 1</a></li>
-            <li><a href="#" class="nav-link">Link 2</a></li>
-            <li><a href="#" class="nav-link">Link 3</a></li>
-            <li><a href="#" class="nav-link">Link 4</a></li>
-            <li><a href="#" class="nav-link">Link 5</a></li>
+            <li><a href="#" class="nav-link">HOME</a></li>
+            <li><a href="#" class="nav-link">ONLINE TUTORIALS</a></li>
+            <li><a href="#" class="nav-link">GET A PRIVATE TUTOR</a></li>
+            <li><a href="#" class="nav-link">SIGN UP</a></li>
+            <li><a href="#" class="nav-link">CONTACT US</a></li>
           </ul>
         </nav>
       </header>
