hero section css added

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </header>
       <section class="hero-wrapper">
         <div class="hero-content">
-          <h1>Do you need help with Maths?</h1>
+          <h1 class="title">Do you need help with Maths?</h1>
           <p>
             Our website uses an interactive methodology of teaching Maths using
             the latest web technologies. Your learning experience with us is
