footer and favicon added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mathematics Tutorials</title>
+    <link rel="shortcut icon" href="./img/favicon.svg" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -85,7 +86,7 @@
         </div>
       </div>
       <footer>
-        <p class="copyright">Company name. Copyright &copy; 2020</p>
+        <p class="copyright">Maths the Fun Way. Copyright &copy; 2020</p>
       </footer>
     </div>
   </body>
