contact html added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="row">
           <div class="col-8">
             <div class="brand">
-              <a href="#" class="brand-link">Maths the Fun Way</a>
+              <a href="./index.html" class="brand-link">Maths the Fun Way</a>
             </div>
           </div>
           <div class="col-4">
@@ -29,11 +29,11 @@
         </div>
         <nav class="nav">
           <ul>
-            <li><a href="#" class="nav-link">HOME</a></li>
+            <li><a href="./index.html" class="nav-link">HOME</a></li>
             <li><a href="#" class="nav-link">ONLINE TUTORIALS</a></li>
             <li><a href="#" class="nav-link">GET A PRIVATE TUTOR</a></li>
             <li><a href="#" class="nav-link">SIGN UP</a></li>
-            <li><a href="#" class="nav-link">CONTACT US</a></li>
+            <li><a href="./contact.html" class="nav-link">CONTACT US</a></li>
           </ul>
         </nav>
       </header>
