--- a/contact.html
+++ b/contact.html
@@ -42,17 +42,35 @@
           <h1 class="title">Contact us</h1>
           <form action="#" method="POST" class="contact_form">
             <div class="form-group">
-              <input class="form-control" type="email" name="email" id="email" required />
+              <input
+                class="form-control"
+                type="email"
+                name="email"
+                id="email"
+                required
+              />
               <label for="email"> Email </label>
             </div>
             <div class="form-group">
-              <input class="form-control" type="text" name="subject" id="subject" />
+              <input
+                class="form-control"
+                type="text"
+                name="subject"
+                id="subject"
+              />
               <label for="subject"> Subject </label>
             </div>
             <div class="form-group">
-              <textarea class="form-control" name="message" id="message" required></textarea>
+              <textarea
+                class="form-control"
+                name="message"
+                id="message"
+                rows="10"
+                required
+              ></textarea>
               <label for="message"> Message </label>
             </div>
+            <button type="submit" class="btn-submit">Send</button>
           </form>
         </div>
       </section>
